service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-s3-service
spec:
  selector:
    app: flask-s3
  # Đổi từ NodePort thành LoadBalancer
  type: LoadBalancer
  ports:
  - protocol: TCP
    # Cổng của Load Balancer sẽ là 80 (HTTP)
    port: 80
    # Chuyển traffic đến cổng 5000 của ứng dụng
    targetPort: 5000
